[package]
name    = "br"
version = "0.1.0"
edition = "2021"

[features]
executable = ["dep:anyhow", "dep:clap"]

[dependencies]
argon2    = { version = "0.5.3", features = ["std", "zeroize"] }
aws-lc-rs = "1.10.0"
bit-vec   = "0.8.0"
rand      = "0.8.5"
thiserror = "1.0.65"
tinyvec   = { version = "1.8.0", features = ["std"] }

anyhow    = { version = "1.0.91", optional = true }
clap      = { version = "4.5.20", features = ["derive"], optional = true }

[[bin]]
name = "br"
required-features = ["executable"]
