[package]
name    = "br"
version = "0.1.0"
edition = "2021"

[features]
executable = ["dep:anyhow", "dep:clap"]

[dependencies]
argon2    = { version = "0.5.3", features = ["std", "zeroize"] }
aws-lc-rs = "1.12.0"
bit-vec   = "0.8.0"
rand      = "0.8.5"
thiserror = "2.0.9"
tinyvec   = { version = "1.8.1", features = ["std"] }

anyhow    = { version = "1.0.94", optional = true }
clap      = { version = "4.5.23", features = ["derive"], optional = true }

[[bin]]
name = "br"
required-features = ["executable"]
