[package]
name    = "br"
version = "0.1.0"
edition = "2021"

[features]
executable = ["dep:anyhow", "dep:clap"]

[dependencies]
argon2    = { version = "0.5.3", features = ["std", "zeroize"] }
aws-lc-rs = "1.14.1"
bit-vec   = "0.8.0"
rand      = "0.9.2"
thiserror = "2.0.11"
tinyvec   = { version = "1.10.0", features = ["std"] }

anyhow    = { version = "1.0.95", optional = true }
clap      = { version = "4.5.53", features = ["derive"], optional = true }

[[bin]]
name = "br"
required-features = ["executable"]
